--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "engines": {
+    "node": "10.16.0",
+    "npm": "6.9.0"
+  },
   "author": "",
   "license": "ISC"
 }
